--- a/templates/add_staff.html
+++ b/templates/add_staff.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Add Department</h1>
+    <h1>Register Staff</h1>
      {% if messages %}
             <div class="alert alert-success">
                 {% for message in messages %}
@@ -12,7 +12,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Add Session</button><button type="reset"> Cancel</button>
+            <button type="submit">Register Staff</button><button type="reset"> Cancel</button>
         </form>
     </div>
     
