--- a/templates/add_staff.html
+++ b/templates/add_staff.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Register Staff</h1>
-     {% if messages %}
-            <div class="alert alert-success">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
-     {% endif %}
+   {% if messages %}
+        <div class="container">
+            {% for message in messages %}
+                {% if message.tags == 'success' %}
+                    <div class="alert alert-success">{{ message }}</div>
+                {% elif message.tags == 'danger' %}
+                    <div class="alert alert-danger">{{ message }}</div>
+                {% else %}
+                    <div class="alert alert-info">{{ message }}</div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endif %}
     <div class="container">
         <form method="post">
             {% csrf_token %}
