--- a/templates/edit_staff.html
+++ b/templates/edit_staff.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<div class="container">
+    <form method="post">
+        {% csrf_token %}
+        <table class="table table-bordered table-sm">
+            <thead>
+                <tr>
+                    <th colspan="2" class="text-center">Edit Record</th>
+                </tr>
+                {% for message in messages %}
+                    {% if message.tags == 'success' %}
+                        <tr>
+                            <th colspan="2" class="alert alert-success">{{ message }}</th>
+                        </tr>
+                    {% elif message.tags == 'error' %}
+                        <tr>
+                            <th colspan="2" class="alert alert-danger">{{ message }}</th>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <th colspan="2" class="alert alert-info">{{ message }}</th>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Name:</strong></td>
+                    <td>{{ form.surname }}</td>
+                </tr>
+                <tr>
+                    <td><strong>First Name:</strong></td>
+                    <td>{{ form.first_name }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Middle Name:</strong></td>
+                    <td>{{ form.middle_name }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Staff ID:</strong></td>
+                    <td>{{ form.staff_id }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Phone:</strong></td>
+                    <td>{{ form.phone_number }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Email:</strong></td>
+                    <td>{{ form.email }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Faculty:</strong></td>
+                    <td>{{ form.faculty }}</td>
+                </tr>
+                <tr>
+                    <td><strong>Department:</strong></td>
+                    <td>{{ form.department }}</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="text-center">
+                        <a href="{% url 'all_staff' %}"><button class="btn btn-secondary">Cancel</button></a>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
+</div>
+{% endblock %}
