--- a/templates/view_staffs.html
+++ b/templates/view_staffs.html
@@ -1,10 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Count</th>
+                <th>Surname</th>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Staff ID</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Faculty</th>
+                <th>Department</th>
+                <th>Date Registered</th>
+                <th>Date Updated</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for obj in staffs %}
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ obj.surname }}</td>
+                <td>{{ obj.first_name }}</td>
+                <td>{{ obj.middle_name }}</td>
+                <td>{{ obj.staff_id }}</td>
+                <td>{{ obj.phone }}</td>
+                <td>{{ obj.email }}</td>
+                <td>{{ obj.faculty }}</td>
+                <td>{{ obj.department }}</td>
+                <td>{{ obj.date_created }}</td>
+                <td>{{ obj.date_updated }}</td>
+                <td>
+                    <a href="{% url 'get_staff' obj.id %}">View</a><br/>
+                    <a href="{% url 'edit_staff' obj.id %}">Edit</a><br/>
+                    <a href="#" onclick="confirmDelete('{{ obj.id }}')">Delete</a>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <form id="delete-form" method="post" style="display: none;">
+        {% csrf_token %}
+        <input type="hidden" name="staff_id" id="staff-id-to-delete">
+    </form>
+
+    <script>
+        function confirmDelete(staffId) {
+            if (confirm("Are you sure you want to delete this record?")) {
+                var form = document.getElementById('delete-form');
+                document.getElementById('staff-id-to-delete').value = staffId;
+                form.action = "{% url 'delete_staff' 0 %}".replace('0', staffId);
+                form.submit();
+            }
+        }
+    </script>
+{% endblock %}
