--- a/templates/view_students.html
+++ b/templates/view_students.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered table-hover">
         <thead>
             <tr>
                 <th>Count</th>
