--- a/templates/view_courses.html
+++ b/templates/view_courses.html
@@ -1,10 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Count</th>
+                <th>Surname</th>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Registration Number</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>Date of Birth</th>
+                <th>Programme</th>
+                <th>Faculty</th>
+                <th>Department</th>
+                <th>Status</th>
+                <th>Date Registered</th>
+                <th>Date Updated</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for obj in students %}
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ obj.surname }}</td>
+                <td>{{ obj.first_name }}</td>
+                <td>{{ obj.middle_name }}</td>
+                <td>{{ obj.registration_number }}</td>
+                <td>{{ obj.phone }}</td>
+                <td>{{ obj.email }}</td>
+                <td>{{ obj.date_of_birth }}</td>
+                <td>{{ obj.programme }}</td>
+                <td>{{ obj.faculty }}</td>
+                <td>{{ obj.department }}</td>
+                <td>{{ obj.status }}</td>
+                <td>{{ obj.date_created }}</td>
+                <td>{{ obj.date_updated }}</td>
+                <td><a href="{% url 'get_student' obj.id %}">View</a><br/> <a href="{% url 'edit_student' obj.id %}">Edit</a><br/> <a href="{% url 'delete_student' obj.id %}">Delete</a></td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
